Move networks staging to aurora

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -247,6 +247,8 @@ Resources:
               Value: !Ref kSphinxPort
             - Name: SPHINX_BASE_URL
               Value: !GetAtt Constants.SphinxBaseUrl
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -560,6 +562,8 @@ Resources:
               Value: !GetAtt Constants.SphinxBaseUrl
             - Name: LOCAL_SPHINX
               Value: "true"
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
