--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -211,6 +211,8 @@ Resources:
         ErrorAlarmThreshold: "5"
         ContainerPort: "3000"
         HealthCheckPath: "/sessions/new"
+        SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
+        SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
@@ -251,6 +253,8 @@ Resources:
         SecretsInstanceAccessPolicyArn: !Ref SecretsInstanceAccessPolicyArn
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
+        SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
+        SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
