--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -244,11 +244,10 @@ Resources:
               Value: !Ref UploadSigningEndpointUrl
             - Name: AWS_SIGNER_KEY
               Value: !Ref UploadSigningAccessKeyId
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_3306_TCP_ADDR
-                  Value: !Ref SharedAuroraMysqlEndpoint
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -354,11 +353,10 @@ Resources:
               Value: !Ref UploadSigningEndpointUrl
             - Name: AWS_SIGNER_KEY
               Value: !Ref UploadSigningAccessKeyId
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_3306_TCP_ADDR
-                  Value: !Ref SharedAuroraMysqlEndpoint
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -617,11 +615,10 @@ Resources:
               Value: !Ref AWS::Region
             - Name: SAY_WHEN_THREAD
               Value: "true"
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_3306_TCP_ADDR
-                  Value: !Ref SharedAuroraMysqlEndpoint
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
