--- a/stacks/container-apps/feeder.prx.org.yml
+++ b/stacks/container-apps/feeder.prx.org.yml
@@ -381,16 +381,10 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_ADDR
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !If [IsStaging, !Ref SharedAuroraPostgresqlEndpoint, !Ref SharedRdsPostgresqlEndpoint]
+            - Name: DB_PORT_5432_TCP_PORT
+              Value: !If [IsStaging, "3306", "5432"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -470,16 +464,10 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_ADDR
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !If [IsStaging, !Ref SharedAuroraPostgresqlEndpoint, !Ref SharedRdsPostgresqlEndpoint]
+            - Name: DB_PORT_5432_TCP_PORT
+              Value: !If [IsStaging, "3306", "5432"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
