--- a/stacks/container-apps/id.prx.org.yml
+++ b/stacks/container-apps/id.prx.org.yml
@@ -171,11 +171,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_3306_TCP_ADDR
-                  Value: !Ref SharedAuroraMysqlEndpoint
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
             - Name: SMTP_ADDRESS
               Value: !Sub email-smtp.${AWS::Region}.amazonaws.com
             - Name: SMTP_AUTHENTICATION
