--- a/stacks/container-apps/remix.yml
+++ b/stacks/container-apps/remix.yml
@@ -206,16 +206,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_ADDR
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !If [IsStaging, !Ref SharedAuroraPostgresqlEndpoint, !Ref SharedRdsPostgresqlEndpoint]
+            - Name: DB_PORT_5432_TCP_PORT
+              Value: !If [IsStaging, "3306", "5432"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -303,16 +297,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_ADDR
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !If [IsStaging, !Ref SharedAuroraPostgresqlEndpoint, !Ref SharedRdsPostgresqlEndpoint]
+            - Name: DB_PORT_5432_TCP_PORT
+              Value: !If [IsStaging, "3306", "5432"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
