--- a/stacks/container-apps/augury.prx.org.yml
+++ b/stacks/container-apps/augury.prx.org.yml
@@ -249,16 +249,10 @@ Resources:
               Value: "prx-mrr-us-east-1-ad-files.s3.us-east-1.amazonaws.com"
             - Name: UPLOAD_ADFILE_PUBLIC_ACCESS_HOST
               Value: "a.prxu.org"
-            - Fn::If:
-                - IsStaging
-                - Name: POSTGRES_HOST
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: POSTGRES_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: POSTGRES_HOST
+              Value: !If [IsStaging, !Ref SharedAuroraPostgresqlEndpoint, !Ref SharedRdsPostgresqlEndpoint]
+            - Name: POSTGRES_PORT
+              Value: !If [IsStaging, "3306", "5432"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -346,16 +340,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Fn::If:
-                - IsStaging
-                - Name: POSTGRES_HOST
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: POSTGRES_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: POSTGRES_HOST
+              Value: !If [IsStaging, !Ref SharedAuroraPostgresqlEndpoint, !Ref SharedRdsPostgresqlEndpoint]
+            - Name: POSTGRES_PORT
+              Value: !If [IsStaging, "3306", "5432"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
