--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -244,6 +244,8 @@ Resources:
               Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}:9200
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -298,6 +300,8 @@ Resources:
               Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}:9200
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
