--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -84,7 +84,6 @@ Parameters:
   SharedGlueDatabaseName: { Type: String }
 
 Conditions:
-  IsStaging: !Equals [!Ref EnvironmentType, Staging]
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsPostgresqlEndpoint, ""]]
@@ -739,16 +738,10 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_ADDR
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsPostgresqlEndpoint, !Ref SharedAuroraPostgresqlEndpoint]
+            - Name: DB_PORT_5432_TCP_PORT
+              Value: !If [IsProduction, "5432", "3306"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -824,16 +817,10 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_ADDR
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsPostgresqlEndpoint, !Ref SharedAuroraPostgresqlEndpoint]
+            - Name: DB_PORT_5432_TCP_PORT
+              Value: !If [IsProduction, "5432", "3306"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
