--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -297,6 +297,8 @@ Resources:
               Value: !Ref S3SigningAccessKeyId
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -388,6 +390,8 @@ Resources:
               Value: !Ref S3SigningAccessKeyId
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -557,6 +561,8 @@ Resources:
               Value: !Ref S3SigningAccessKeyId
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
