--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -201,6 +201,8 @@ Resources:
               Value: !Ref AWS::Region
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
             - Name: SMTP_ADDRESS
               Value: !Sub email-smtp.${AWS::Region}.amazonaws.com
             - Name: SMTP_AUTHENTICATION
