--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -249,6 +249,8 @@ Resources:
               Value: !GetAtt Constants.SphinxBaseUrl
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -564,6 +566,8 @@ Resources:
               Value: "true"
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
