--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -36,7 +36,6 @@ Parameters:
   SharedAuroraPostgresqlEndpoint: { Type: String }
 
 Conditions:
-  IsStaging: !Equals [!Ref EnvironmentType, Staging]
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsPostgresqlEndpoint, ""]]
@@ -220,16 +219,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_ADDR
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsPostgresqlEndpoint, !Ref SharedAuroraPostgresqlEndpoint]
+            - Name: DB_PORT_5432_TCP_PORT
+              Value: !If [IsProduction, "5432", "3306"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -278,16 +271,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_ADDR
-                  Value: !Ref SharedAuroraPostgresqlEndpoint
-                - !Ref AWS::NoValue
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_5432_TCP_PORT
-                  Value: "3306" # TODO Make this a root stack parameter
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !If [IsProduction, !Ref SharedRdsPostgresqlEndpoint, !Ref SharedAuroraPostgresqlEndpoint]
+            - Name: DB_PORT_5432_TCP_PORT
+              Value: !If [IsProduction, "5432", "3306"]
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
