--- a/storage/multi-region-replication/radiotopia-media.yml
+++ b/storage/multi-region-replication/radiotopia-media.yml
@@ -87,6 +87,10 @@ Resources:
     UpdateReplacePolicy: Retain
     Properties:
       BucketName: !Sub prx-mrr-${AWS::Region}-radiotopia-media
+      LifecycleConfiguration:
+        Rules:
+          - NoncurrentVersionExpirationInDays: 1 # Permanently delete non-current versions
+            Status: Enabled
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: true
