--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -44,12 +44,8 @@ Parameters:
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
-  HasRdsEndpoints: !And
-    - !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
-    - !Not [!Equals [!Ref SharedRdsPostgresqlEndpoint, ""]]
-  HasAuroraEndpoints: !And
-    - !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
-    - !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
+  HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
+  HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
   EnableWorkers: !And [!Condition HasRdsEndpoints, !Condition IsPrimaryRegion]
 
 Resources:
