Guard on aurora endpoint, not shared rds

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -50,7 +50,7 @@ Conditions:
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
-  EnableWorkers: !And [!Condition HasRdsEndpoint, !Condition IsPrimaryRegion]
+  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
 
 Resources:
   ExchangeWildcardHostHeaderListenerRule:
@@ -246,7 +246,7 @@ Resources:
 
   WebEcsService:
     Type: AWS::ECS::Service
-    Condition: HasRdsEndpoint # See README
+    Condition: HasAuroraEndpoint # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
