--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -114,7 +114,7 @@ Resources:
 
   EcsService:
     Type: AWS::ECS::Service
-    Condition: HasRdsEndpoint
+    Condition: HasAuroraEndpoint # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
