--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -146,7 +146,7 @@ Resources:
   # HTTPS traffic via the shared application load balancer.
   PublicWebEcsService:
     Type: AWS::ECS::Service
-    Condition: HasRdsEndpoint
+    Condition: HasAuroraEndpoint # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
@@ -445,7 +445,7 @@ Resources:
   # the image act as a Sphinx server.
   SphinxServerEcsService:
     Type: AWS::ECS::Service
-    Condition: HasRdsEndpoint
+    Condition: HasAuroraEndpoint # See README
     DependsOn:
       - SphinxServerSearchdNlbListener
       - SphinxServerWebNlbListener
