--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -46,7 +46,7 @@ Conditions:
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
-  EnableWorkers: !And [!Condition HasRdsEndpoints, !Condition IsPrimaryRegion]
+  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
 
 Resources:
   HostHeaderListenerRule:
@@ -167,7 +167,7 @@ Resources:
 
   WebEcsService:
     Type: AWS::ECS::Service
-    Condition: HasRdsEndpoints # See README
+    Condition: HasAuroraEndpoint # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
