Add missing worker database envs

--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -282,11 +282,10 @@ Resources:
               Value: !Ref AWS::Region
             - Name: MEMCACHE_SERVERS
               Value: !Ref SharedMemcachedEndpointAddress
-            - Fn::If:
-                - IsStaging
-                - Name: DB_PORT_3306_TCP_ADDR
-                  Value: !Ref SharedAuroraMysqlEndpoint
-                - !Ref AWS::NoValue
+            - Name: DB_PORT_3306_TCP_ADDR
+              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+            - Name: DB_PORT_3306_TCP_PORT
+              Value: "3306"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
