--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -41,6 +41,9 @@ Parameters:
     AllowedValues:
       - Primary
       - Secondary
+  SharedVpcCidrBlock:
+    Type: String
+    AllowedPattern: "^(10|172|192).[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}\/16$"
   DovetailRedisHostname: { Type: String }
   # Application Specific
   AuguryEcrImageTag: { Type: String }
