--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -43,7 +43,7 @@ Parameters:
       - Secondary
   SharedVpcCidrBlock:
     Type: String
-    AllowedPattern: "^(10|172|192).[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}\/16$"
+    AllowedPattern: ^(10|172|192).[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}\/16$
   DovetailRedisHostname: { Type: String }
   # Application Specific
   AuguryEcrImageTag: { Type: String }
