Use parameter CIDR block

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -16,6 +16,7 @@ Parameters:
   RootStackId: { Type: String }
   TemplateUrlPrefix: { Type: String }
   CloudFormationNotificationArn: { Type: String }
+  SharedVpcCidrBlock: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -26,11 +27,7 @@ Resources:
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
-      # TODO Needs to be more dynamic or a parameter
-      CidrBlock: !If
-        - IsProduction
-        - 172.30.0.0/16
-        - 10.30.0.0/16
+      CidrBlock: !Ref SharedVpcCidrBlock
       EnableDnsSupport: true
       EnableDnsHostnames: true
       InstanceTenancy: default
