--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -44,6 +44,8 @@ Parameters:
   SharedVpcCidrBlock:
     Type: String
     AllowedPattern: ^(10|172|192).[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}\/16$
+    ConstraintDescription: >-
+      must be a /16 private network
   DovetailRedisHostname: { Type: String }
   # Application Specific
   AuguryEcrImageTag: { Type: String }
@@ -793,6 +795,7 @@ Resources:
         RootStackId: !GetAtt Constants.RootStackId
         TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/shared-vpc
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
+        SharedVpcCidrBlock: !Ref SharedVpcCidrBlock
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
