Fix actions to all go to warn; fix metric names

--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -211,20 +211,20 @@ Resources:
       FilterPattern: '{ $._logLevel = "warn" }'
       LogGroupName: !Ref DovetailCdnArrangerLogGroup
       MetricTransformations:
-        - MetricName: !Sub dovetail_cdn_arranger_warns_${EnvironmentTypeAbbreviation}"
+        - MetricName: !Sub dovetail_cdn_arranger_warns_${EnvironmentTypeAbbreviation}
           MetricNamespace: LogMetrics
           MetricValue: "1"
   ArrangerFunctionLoggedWarnAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmActions: [!Ref OpsErrorMessagesSnsTopicArn]
+      AlarmActions: [!Ref OpsWarnMessagesSnsTopicArn]
       AlarmName: !Sub "[Dovetail][CdnArranger][LogWarnings] ${EnvironmentType}"
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail Cdn Arranger Lambda function has logged some warnings.
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       InsufficientDataActions: [!Ref OpsWarnMessagesSnsTopicArn]
-      MetricName: !Sub dovetail_cdn_arranger_warns_${EnvironmentTypeAbbreviation}"
+      MetricName: !Sub dovetail_cdn_arranger_warns_${EnvironmentTypeAbbreviation}
       Namespace: LogMetrics
       OKActions: [!Ref OpsWarnMessagesSnsTopicArn]
       Period: 60
@@ -237,7 +237,7 @@ Resources:
       FilterPattern: '{ $._logLevel = "error" }'
       LogGroupName: !Ref DovetailCdnArrangerLogGroup
       MetricTransformations:
-        - MetricName: !Sub dovetail_cdn_arranger_errors_${EnvironmentTypeAbbreviation}"
+        - MetricName: !Sub dovetail_cdn_arranger_errors_${EnvironmentTypeAbbreviation}
           MetricNamespace: LogMetrics
           MetricValue: "1"
   ArrangerFunctionLoggedErrorAlarm:
@@ -250,7 +250,7 @@ Resources:
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       InsufficientDataActions: [!Ref OpsErrorMessagesSnsTopicArn]
-      MetricName: !Sub dovetail_cdn_arranger_errors_${EnvironmentTypeAbbreviation}"
+      MetricName: !Sub dovetail_cdn_arranger_errors_${EnvironmentTypeAbbreviation}
       Namespace: LogMetrics
       OKActions: [!Ref OpsErrorMessagesSnsTopicArn]
       Period: 60
