Add Fat Leonard feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -181,3 +181,7 @@ Resources:
         # Unseen Upside
         - { Type: A, Name: !Sub "pf8327unse.${Domain}", AliasTarget: { DNSName: "d1b54pbn0l0sau.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf8327unse.${Domain}", AliasTarget: { DNSName: "d1b54pbn0l0sau.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Project Brazen Originals: Fat Leonard
+        - { Type: A, Name: !Sub "pf9057flpb.${Domain}", AliasTarget: { DNSName: "d2g66hthgrcy5m.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf9057flpb.${Domain}", AliasTarget: { DNSName: "d2g66hthgrcy5m.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
