--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -167,6 +167,7 @@ Resources:
 
   # INGRESS 170
   # Allows inbound SSH traffic from all IPs
+  # TODO Maybe update this
   InboundIpV4SshNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
