--- a/stacks/serverless/dovetail-cdn-origin-request.yml
+++ b/stacks/serverless/dovetail-cdn-origin-request.yml
@@ -60,7 +60,7 @@ Resources:
                   - "s3:GetObject"
                 Resource:
                   # TODO: multiple region arrangers
-                  - !Ref ArrangerBucketArn
+                  - !Sub ${ArrangerBucketArn}/*
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
       Tags:
