Disable prod ASG temporarily

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -855,6 +855,7 @@ Resources:
       TimeoutInMinutes: 20
   SharedEcsAsgStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !GetAtt Constants.CloudFormationNotificationArn
