--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -328,7 +328,7 @@ Resources:
       MaxSize: !If [IsProduction, "50", "20"]
       MetricsCollection:
         - Granularity: 1Minute
-      MinSize: !If [IsProduction, "0", "0"]
+      MinSize: !If [IsProduction, "0", "0"] # TODO Increase min in prod
       NewInstancesProtectedFromScaleIn: true
       # TODO NotificationConfigurations
       Tags:
