Only create logs in staging

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -480,6 +480,7 @@ Resources:
       Timeout: 10
   EventsNotificationsFunctionLogGroup:
     Type: AWS::Logs::LogGroup
+    Condition: IsStaging # TODO
     Properties:
       LogGroupName: !Sub /aws/lambda/${EventsNotificationsFunction}
       RetentionInDays: 7
