Disable more resources

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -163,6 +163,7 @@ Resources:
   # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-optimized_AMI.html
   Ec2LaunchTemplate:
     Type: AWS::EC2::LaunchTemplate
+    Condition: IsStaging # TODO
     Properties:
       LaunchTemplateData:
         CreditSpecification:
