--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -64,6 +64,7 @@ Resources:
         - { Key: prx:dev:application, Value: Common }
   InstanceRoleSetHealthPolicy:
     Type: AWS::IAM::Policy
+    Condition: IsStaging # TODO
     Properties:
       PolicyName: AutoscalingSetInstanceHealth
       PolicyDocument:
