Allow zero-size ASG

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -302,9 +302,9 @@ Resources:
     Condition: IsStaging # TODO
     CreationPolicy:
       AutoScalingCreationPolicy:
-        MinSuccessfulInstancesPercent: 100
+        MinSuccessfulInstancesPercent: 0 # TODO Set to 100
       ResourceSignal:
-        Count: 1
+        Count: 0 # TODO Find a good value
         Timeout: PT5M
     UpdatePolicy:
       AutoScalingReplacingUpdate:
@@ -331,7 +331,7 @@ Resources:
       MaxSize: !If [IsProduction, "50", "20"]
       MetricsCollection:
         - Granularity: 1Minute
-      MinSize: !If [IsProduction, "7", "0"]
+      MinSize: !If [IsProduction, "0", "0"] # TODO Set prod to ~7
       NewInstancesProtectedFromScaleIn: true
       # TODO NotificationConfigurations
       Tags:
