--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -146,7 +146,8 @@ Resources:
   # EGRESS 120
   # Allows outbound traffic on high-numbered ports to the VPC. This generally
   # is for return traffic to clients on ephemeral ports. Some of the
-  # ports in this range may be denied by other rules.
+  # ports in this range may be denied by other rules. Also used to connect to
+  # databases and other services within the VPC.
   # https://docs.aws.amazon.com/vpc/latest/userguide/vpc-network-acls.html#nacl-ephemeral-ports
   OutboudIpV4TcpEphemeralPortsNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
