--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -185,3 +185,7 @@ Resources:
         # Project Brazen Originals: Fat Leonard
         - { Type: A, Name: !Sub "pf9057flpb.${Domain}", AliasTarget: { DNSName: "d2g66hthgrcy5m.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf9057flpb.${Domain}", AliasTarget: { DNSName: "d2g66hthgrcy5m.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Project Brazen Originals: Fat Leonard
+        - { Type: A, Name: !Sub "pf4242hgwp.${Domain}", AliasTarget: { DNSName: "d3gu3i3d1razd2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf4242hgwp.${Domain}", AliasTarget: { DNSName: "d3gu3i3d1razd2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
