--- a/db/castle-postgres-instance.yml
+++ b/db/castle-postgres-instance.yml
@@ -66,6 +66,7 @@ Parameters:
       - db.t2.large
       - db.r4.large
       - db.r5.large
+      - db.r5.xlarge
   EnvironmentType:
     Type: String
     Description: Environment this database is used by
@@ -116,7 +117,7 @@ Resources:
       DeletionProtection: true
       EnablePerformanceInsights: !If [IsProduction, true, false]
       Engine: postgres
-      EngineVersion: "11.1"
+      EngineVersion: "11.12"
       MasterUsername: !Ref DBUser
       MasterUserPassword: !Ref DBPassword
       MultiAZ: !If [IsProduction, true, false]
