--- a/db/shared-apps-aurora-mysql/database-cluster.yml
+++ b/db/shared-apps-aurora-mysql/database-cluster.yml
@@ -56,12 +56,12 @@ Parameters:
       to the database belong to
     Type: String
 
-Mappings:
-  EnvironmentTypeMap:
-    Staging:
-      abbreviation: stag
-    Production:
-      abbreviation: prod
+# Mappings:
+#   EnvironmentTypeMap:
+#     Staging:
+#       abbreviation: stag
+#     Production:
+#       abbreviation: prod
 
 Conditions:
   # IsProduction: !Equals [!Ref EnvironmentType, Production]
