Double the dovetail memory hard limit

--- a/stacks/container-apps/dovetail.prx.org.yml
+++ b/stacks/container-apps/dovetail.prx.org.yml
@@ -35,6 +35,8 @@ Parameters:
     Type: String
   ContainerMemory:
     Type: String
+  ContainerMemoryReservation:
+    Type: String
   ContainerCpu:
     Type: String
   # Dovetail ###################################################################
@@ -447,6 +449,7 @@ Resources:
               awslogs-group: !Ref DovetailLogGroup
               awslogs-region: !Ref AWS::Region
           Memory: !Ref ContainerMemory
+          MemoryReservation: !Ref ContainerMemoryReservation
           Name: "dovetail-express"
           PortMappings:
             - HostPort: 0
@@ -587,6 +590,7 @@ Resources:
               awslogs-group: !Ref DovetailRouterLogGroup
               awslogs-region: !Ref AWS::Region
           Memory: !Ref ContainerMemory
+          MemoryReservation: !Ref ContainerMemoryReservation
           Name: "dovetail-router"
           PortMappings:
             - HostPort: 0
