--- a/stacks/apps/dovetail-legacy.yml
+++ b/stacks/apps/dovetail-legacy.yml
@@ -228,7 +228,8 @@ Resources:
               awslogs-group: !Ref TaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: !If [IsProduction, 1000, 400]
+          Memory: !If [IsProduction, 2000, 800]
+          MemoryReservation: !If [IsProduction, 1000, 400]
           Name: !Ref kContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
