Add Aurora DB port parameters

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -30,8 +30,10 @@ Parameters:
   DeploymentPackageBucketName: { Type: String }
   SharedRdsMysqlEndpoint: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
+  SharedAuroraMysqlPort: { Type: String }
   SharedRdsPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlEndpoint: { Type: String }
+  SharedAuroraPostgresqlPort: { Type: String }
   DovetailRouterHostname: { Type: String }
   DovetailRedisHostname: { Type: String }
 
@@ -98,8 +100,10 @@ Resources:
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
         SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
+        SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -227,6 +231,7 @@ Resources:
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
         SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
+        SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
