--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -51,8 +51,10 @@ Parameters:
   PlayHostname: { Type: String }
   SharedRdsMysqlEndpoint: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
+  SharedAuroraMysqlPort: { Type: String }
   SharedRdsPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlEndpoint: { Type: String }
+  SharedAuroraPostgresqlPort: { Type: String }
   SharedGlueDatabaseName: { Type: String }
 
   AuguryEcrImageTag: { Type: String }
@@ -119,6 +121,7 @@ Resources:
         VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -249,6 +252,7 @@ Resources:
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
         SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
+        SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -284,6 +288,7 @@ Resources:
         VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         SharedGlueDatabaseName: !Ref SharedGlueDatabaseName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -331,6 +336,7 @@ Resources:
         KmsEndpointAccessSecurityGroupId: !Ref KmsEndpointAccessSecurityGroupId
         SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
+        SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -405,6 +411,7 @@ Resources:
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
