--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -80,6 +80,7 @@ Parameters:
   VpcPublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedAuroraPostgresqlEndpoint: { Type: String }
+  SharedAuroraPostgresqlPort: { Type: String }
   SharedGlueDatabaseName: { Type: String }
 
 Conditions:
