--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -31,6 +31,7 @@ Parameters:
   CloudWatchAlarmTaggerServiceToken: { Type: String }
   SharedRdsMysqlEndpoint: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
+  SharedAuroraMysqlPort: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
