--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -20,8 +20,10 @@ Parameters:
   # Optional
   SharedRdsMysqlEndpoint: { Type: String, Default: "" }
   SharedAuroraMysqlEndpoint: { Type: String, Default: "" }
+  SharedAuroraMysqlPort: { Type: String, Default: "3306" }
   SharedRdsPostgresqlEndpoint: { Type: String, Default: "" }
   SharedAuroraPostgresqlEndpoint: { Type: String, Default: "" }
+  SharedAuroraPostgresqlPort: { Type: String, Default: "3306" }
   CastleRdsPostgresqlEndpoint: { Type: String, Default: "" }
   # Required
   AwsOrganizationId: { Type: String }
@@ -968,8 +970,10 @@ Resources:
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
         SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
+        SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
         DovetailRedisHostname: !Ref DovetailRedisHostname
 
@@ -1067,8 +1071,10 @@ Resources:
         PlayHostname: !GetAtt Constants.PlayHostname
         SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
+        SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
 
         # App-specific parameters
