--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -44,6 +44,7 @@ Parameters:
   SharedMemcachedEndpointPort: { Type: String }
   SharedRdsMysqlEndpoint: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
+  SharedAuroraMysqlPort: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
