Use port parameters for Feeder and Remix

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -739,7 +739,7 @@ Resources:
             - Name: DB_PORT_5432_TCP_ADDR
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraPostgresqlPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -817,7 +817,7 @@ Resources:
             - Name: DB_PORT_5432_TCP_ADDR
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraPostgresqlPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
