--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -220,7 +220,7 @@ Resources:
             - Name: DB_PORT_5432_TCP_ADDR
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraPostgresqlPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -272,7 +272,7 @@ Resources:
             - Name: DB_PORT_5432_TCP_ADDR
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraPostgresqlPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
