Remove unnecessary quotes

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -194,7 +194,7 @@ Resources:
         - Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
-              Value: "castle"
+              Value: castle
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
