--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -450,13 +450,13 @@ Resources:
             - Name: UPLOAD_ADFILE_ACCESS_KEY_ID
               Value: !Ref S3SigningAccessKey
             - Name: UPLOAD_ADFILE_AWS_REGION
-              Value: "us-east-1"
+              Value: us-east-1
             - Name: UPLOAD_ADFILE_BUCKET
-              Value: "prx-mrr-us-east-1-ad-files"
+              Value: prx-mrr-us-east-1-ad-files
             - Name: UPLOAD_ADFILE_BUCKET_DOMAIN
-              Value: "prx-mrr-us-east-1-ad-files.s3.us-east-1.amazonaws.com"
+              Value: prx-mrr-us-east-1-ad-files.s3.us-east-1.amazonaws.com
             - Name: UPLOAD_ADFILE_PUBLIC_ACCESS_HOST
-              Value: "a.prxu.org"
+              Value: a.prxu.org
             - Name: POSTGRES_HOST
               Value: !If [IsProduction, !Ref SharedRdsPostgresqlEndpoint, !Ref SharedAuroraPostgresqlEndpoint]
             - Name: POSTGRES_PORT
